--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,8 @@ services:
     postgres:
         image: postgres:9.6
         container_name: postgreSQL
-        environment: 
-            POSTGRES_USER: user
-            POSTGRES_PASSWORD: passwd
-            POSTGRES_DB: airflow
-            PGDATA: /var/lib/postgresql/data/pgdata
+        env_file: 
+            - ./postgres.env
         volumes:
             - ./pgdata:/var/lib/postgresql/data/pgdata
 
@@ -16,7 +13,7 @@ services:
         image: apache/airflow:1.10.10
         container_name: airflow_webserver
         env_file: 
-            - ./common.env
+            - ./airflow_common.env
         depends_on: 
             - postgres
         command: webserver
@@ -29,7 +26,7 @@ services:
         image: apache/airflow:1.10.10
         container_name: airflow_scheduler
         env_file: 
-            - ./common.env
+            - ./airflow_common.env
         depends_on: 
             - postgres
         command: scheduler
