--- a/airflow_common.env
+++ b/airflow_common.env
@@ -1,2 +1,10 @@
 AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://user:passwd@postgres:5432/airflow
 AIRFLOW__WEBSERVER__DEMO_MODE=False
+AIRFLOW__CELERY__BROKER_URL=redis://redis:6379/
+AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://user:passwd@postgres:5432/airflow
+AIRFLOW__CORE__EXECUTOR=CeleryExecutor
+AIRFLOW__CORE__REMOTE_LOGGING=True
+AIRFLOW__CORE__REMOTE_LOG_CONN_ID=airflow_gcp_key
+AIRFLOW__CORE__REMOTE_BASE_LOG_FOLDER=gs://airflow-logs-20200612/
+AIRFLOW__CORE__FERNET_KEY=DSm-i_gLjr9-GEJcA7XArZSdafmQXbP-Xk-rVKlRUaQ=
+AIRFLOW__WEBSERVER__EXPOSE_CONFIG=True
